# solana-trader-client-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  SETUP.md
.circleci/: config.yml
src/: common.rs  lib.rs
src/common/: constants.rs  mod.rs  signing.rs
src/connections/: ws.rs
src/examples/: grpc.rs  http.rs  ws.rs
src/provider/: constants.rs  error.rs  grpc.rs  http.rs  mod.rs  utils.rs  ws.rs
src/provider/grpc/: general.rs  mod.rs  quote.rs  stream.rs  swap.rs  swaps.rs
src/provider/http/: general.rs  mod.rs  quote.rs  quotes.rs  swap.rs
src/provider/ws/: general.rs  mod.rs  quote.rs  quotes.rs  stream.rs  swap.rs
tests/: grpc.rs  http.rs  ws.rs
tests/grpc/: common.rs  general.rs  memo.rs  mod.rs  quote.rs  quotes.rs  raydium.rs  stream.rs  submit.rs  swap.rs
tests/http/: general.rs  memo.rs  mod.rs  quote.rs  quotes.rs  raydium.rs  swap.rs
tests/ws/: common.rs  general.rs  memo.rs  mod.rs  quote.rs  quotes.rs  raydium.rs  stream.rs  swap.rs
