[package]
name = "solana-trader-client-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "grpc"
path = "src/examples/grpc.rs"

[[example]]
name = "ws"
path = "src/examples/ws.rs"

[dependencies]
anyhow = "1.0.91"
futures-util = "0.3.31"
futures-macro = "0.3.31"
lazy_static = "1.5.0"
reqwest = "0.12.4"
serde = "1.0.213"
serde_json = "1.0.132"
solana-sdk = "2.0.0"
solana-trader-proto = { path = "../../services/solana-trader-proto/rust" }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"]}
tonic = { version = "0.12.3", features = ["tls", "tls-webpki-roots"] }
tower = "0.5.1"
url = "2.5.2"
prost = "0.13.3"
base64 = "0.22.1"
tokio-rustls = "0.26.0"
webpki-roots = "0.26.6"
ring = "0.17.8"
rustls = { version = "0.23.16", features = ["ring"] }

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
