[package]
name = "solana-trader-client-rust"
version = "0.1.0"
edition = "2021"
authors = ["support@bloxroute.com"]
description = "Solana Trader API client implementation"
license = "MIT"
repository = "https://github.com/bloXroute-Labs/solana-trader-client-rust"
homepage = "https://bloxroute.com/"
readme = "README.md"
keywords = ["solana", "blockchain", "trading", "client", "sdk", "api"]
categories = ["development-tools::ffi", "cryptography::cryptocurrencies"]

[[test]]
name = "grpc"
path = "tests/grpc/mod.rs"

[[test]]
name = "http"
path = "tests/http/mod.rs"

[[test]]
name = "ws"
path = "tests/ws/mod.rs"

[dependencies]
dotenv = "0.15"
anyhow = "1.0.91"
futures-util = "0.3.31"
futures-macro = "0.3.31"
lazy_static = "1.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.213"
bitnet = "0.31.9"
serde_json = "1.0.132"
solana-sdk = "2.1.0"
solana-hash = "2.1.0"
solana-trader-proto = { git = "https://github.com/bloXroute-Labs/solana-trader-proto.git", branch = "rust-support" }
# solana-trader-proto = { path = "../solana-trader-proto"}
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"]}
tonic = { version = "0.12.3", features = ["tls", "tls-webpki-roots"] }
tower = "0.5.1"
url = "2.5.2"
prost = "0.13.3"
base64 = "0.22.1"
tokio-rustls = "0.26.0"
webpki-roots = "0.26.6"
ring = "0.17.8"
rustls = { version = "0.23.16", features = ["ring"] }
tokio-stream = { version = "0.1.16", features = ["sync"] }
bincode = "1.3.3"
env_logger = "0.11.5"
async-trait = "0.1.83"
tracing = "0.1.40"
serial_test = "3.1.1"

[dev-dependencies]
test-case = "3.3.1"

[patch.crates-io.curve25519-dalek]
git = "https://github.com/anza-xyz/curve25519-dalek.git"
rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
